cmake_minimum_required(VERSION 3.13)

project(redis-starter-cpp)

file(GLOB_RECURSE SOURCE_FILES src/*.cpp)

set(CMAKE_CXX_STANDARD 23)
set(THREADS_PREFER_PTHREAD_FLAG ON)

find_package(Threads REQUIRED)
find_package(asio CONFIG REQUIRED)

add_executable(main ${SOURCE_FILES})

target_include_directories(main PRIVATE src src/server)

target_link_libraries(main PRIVATE asio asio::asio)
target_link_libraries(main PRIVATE Threads::Threads)
